--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,11 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#D5D5D5</color>
+    <color name="tomato">#F15025</color>
+    <color name="warm_purple">#5E2A84</color>
+    <color name="greyish_brown">#4A4A4A</color>
+    <color name="greyish">#AAAAAA</color>
+    <color name="white_two">#FCFCFC</color>
+    <color name="dark">#2D3142</color>
 </resources>
