--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,11 +6,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/ic_menu_home"
+            android:title="@string/menu_home"/>
         <item
             android:id="@+id/nav_about"
-            android:icon="@drawable/logo_sobre"
+            android:icon="@drawable/ic_menu_about"
             android:title="@string/menu_about" />
     </group>
 </menu>
